import es.ull.patrones.giu.TrafficLightGIU;
import es.ull.patrones.trafficLight.TrafficLight;

import javax.sound.sampled.UnsupportedAudioFileException;
import java.io.IOException;
import java.util.Timer;
import java.util.TimerTask;

public class Main {
    public static void main(String[] args) throws UnsupportedAudioFileException, IOException {

        TrafficLightGIU trafficLightGIU = new TrafficLightGIU();
    }
}