@startuml

title __P5-DAP's Class Diagram__\n

  namespace es.ull.patrones {
    class Main {
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.giu {
      class es.ull.patrones.giu.TrafficLightGIU {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.state {
      class es.ull.patrones.state.OnGreen {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.state {
      class es.ull.patrones.state.OnOrange {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.state {
      class es.ull.patrones.state.OnRed {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.state {
      interface es.ull.patrones.state.State {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.trafficLight {
      class es.ull.patrones.trafficLight.TrafficLight {
      }
    }
  }
  

  es.ull.patrones.giu.TrafficLightGIU o-- es.ull.patrones.trafficLight.TrafficLight : trafficLightsVertical
  es.ull.patrones.state.OnGreen .up.|> es.ull.patrones.state.State
  es.ull.patrones.state.OnGreen o-- es.ull.patrones.trafficLight.TrafficLight : trafficLight
  es.ull.patrones.state.OnOrange .up.|> es.ull.patrones.state.State
  es.ull.patrones.state.OnOrange o-- es.ull.patrones.trafficLight.TrafficLight : trafficLight
  es.ull.patrones.state.OnRed .up.|> es.ull.patrones.state.State
  es.ull.patrones.state.OnRed o-- es.ull.patrones.trafficLight.TrafficLight : trafficLight
  es.ull.patrones.trafficLight.TrafficLight o-- es.ull.patrones.state.State : state


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
